syntax = "proto3";

package com.devproblems;
option java_multiple_files = true;
import "demo.proto";

service BookAuthorServiceA{

  rpc getAuthor(Author) returns(Author){}

  rpc getBooksByAuthor(Author) returns(stream Book){}

  rpc getExpensiveBook(stream Book) returns (Book){}

  rpc getBookByAuthorGender(stream Book) returns(stream Book){}

}
service BookAuthorServiceB{
  rpc getAuthorId(AuthorIdRequest) returns(Author){}
}
